--- a/public/css/wishlist-for-woo-public.css
+++ b/public/css/wishlist-for-woo-public.css
@@ -2,3 +2,61 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+
+/*============================================== 
+            Wishlist Button Styles at Loops
+==============================================*/
+ .add-to-wishlist.mwb-wfw-loop-icon-button {
+    top: 2px;
+    right: 10px;
+    position: absolute;
+    filter: grayscale(1);
+    font-size: 24px;
+}
+
+.add-to-wishlist.mwb-wfw-loop-icon-button:hover {
+    filter: unset;
+    color: rgb(233, 17, 17);
+}
+
+a.add-to-wishlist.mwb-wfw-loop-text-button.mwb-woocommerce-before-shop-loop-item-loop {
+    margin-bottom: 5px;
+}
+
+a.add-to-wishlist.mwb-wfw-loop-text-button.mwb-woocommerce-after-shop-loop-item-loop {
+    margin-top: -16px;
+    margin-bottom: 6px;
+}
+
+/*============================================== 
+            Wishlist Icon Styles at Loops
+==============================================*/
+.add-to-wishlist.mwb-wfw-loop-text-button {
+    background-color: #9b5c8f;
+    padding: 5px;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    color: #ffffff;
+    display: block;
+    margin: 2px;
+    transition: all 0.2s ease-in-out;
+}
+
+.add-to-wishlist.mwb-wfw-loop-text-button:hover {
+    background-color: inherit;
+    border: 2px solid #9b5c8f;
+    color: #9b5c8f;
+}
+
+
+/*============================================== 
+           Wishlist General Fixes
+==============================================*/
+
+/* Remove borders upon hover and active links. */
+.add-to-wishlist.mwb-wfw-loop-text-button:focus,
+.add-to-wishlist.mwb-wfw-loop-icon-button:focus {
+    outline: none;
+    box-shadow: none;
+}
