--- a/public/css/wishlist-for-woo-public.css
+++ b/public/css/wishlist-for-woo-public.css
@@ -7,7 +7,7 @@
 /*============================================== 
             Wishlist Button Styles at Loops
 ==============================================*/
- .add-to-wishlist.mwb-wfw-loop-icon-button {
+.add-to-wishlist.mwb-wfw-loop-icon-button {
     top: 2px;
     right: 10px;
     position: absolute;
@@ -97,4 +97,448 @@ a.add-to-wishlist.mwb-wfw-loop-text-button.mwb-woocommerce-after-shop-loop-item-
 .add-to-wishlist.mwb-wfw-loop-icon-button:focus {
     outline: none;
     box-shadow: none;
+}
+
+/*============================================== 
+           Wishlist front page
+==============================================*/
+/*colors - #f2f2f2, #000000, #cccccc, #ffffff, #9b5c8f, #0071a1*/
+main ul,
+main li,
+main p,
+main form {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+main.wfw_main {
+    font-family: sans-serif;
+    color: #000000;
+}
+
+main.wfw_main .wfw_main_header a,
+main.wfw_main .wfw_content a {
+    text-decoration: none;
+}
+
+main a:focus,
+main input:focus,
+main select:focus,
+main textarea:focus,
+main button:focus {
+    text-decoration: none;
+    box-shadow: none;
+    outline: none;
+}
+
+.wfw_content_more i {
+    position: relative;
+    padding: 0 13px 0;
+}
+
+.wfw_content_more i:before {
+    top: -10px;
+    position: absolute;
+    right: 2px;
+}
+
+.wfw_main_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: #f2f2f2;
+    padding: 0 15px 0px 0px;
+}
+
+.wfw_invite-icon {
+    font-size: 18px;
+    word-spacing: 5px;
+}
+
+.wfw_invite-icon a {
+    font-size: 14px;
+    font-weight: 400;
+    border: 1px solid #f2f2f2;
+    padding: 2px 10px;
+    border-radius: 35px;
+}
+
+.wfw_invite-icon a span {
+    font-weight: 800;
+}
+
+.wfw_navbar {
+    display: flex;
+}
+
+.wfw_navlink {
+    padding: 10px;
+    font-weight: 600;
+    color: #000000;
+    cursor: pointer;
+}
+
+.wfw_navlink.active {
+    background-color: #ffffff;
+    border-top: 2px solid #9b5c8f;
+    color: #9b5c8f;
+}
+
+.wfw_navbar_button {
+    font-size: 14px;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+}
+
+.wfw_content {
+    display: flex;
+}
+
+.wfw_content-left {
+    flex: 0 0 25%;
+    font-size: 12px;
+}
+
+.wfw_content-left_list {
+    margin: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 3px;
+    background-color: #f2f2f2;
+}
+
+.wfw_content-list_des a {
+    margin-right: 5px;
+    color: #000000;
+    font-weight: 600;
+}
+
+.wfw_content-list_des {
+    display: flex;
+    justify-content: space-between;
+}
+
+.wfw_content-right_wrapper {
+    flex: 0 0 75%;
+}
+
+.wfw_content-right {
+    display: flex;
+    padding: 5px 10px;
+    justify-content: space-between;
+    border-bottom: 1px solid #f2f2f2;
+    font-size: 13px;
+}
+
+.wfw_content-right_item {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    font-size: 12px;
+    transition: all 0.2s ease-in-out;
+}
+
+.wfw_content-right_item:hover {
+    box-shadow: 0 10px 10px -10px #cccccc;
+}
+
+.wfw_more_links {
+    max-width: 150px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.wfw_content_more {
+    position: relative;
+    padding-top: 10px;
+    cursor: pointer;
+    display: inline-block;
+    height: 100%;
+}
+
+.wfw_content_more_link li {
+    padding: 5px;
+}
+
+.wfw_content_more:hover .wfw_content_more_link {
+    display: block;
+}
+
+
+.wfw_content_more:hover .wfw_content_more>span {
+    color:#000000;
+}
+
+.wfw_content_more_link li:hover {
+    background-color: #cccccc;
+    color: #ffffff;
+}
+
+.wfw_content_more_link {
+    position: absolute;
+    top: 35px;
+    right: 0;
+    width: 150px;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    color: #000000;
+    display: none;
+}
+
+.wfw_content-right_item-img {
+    flex: 0 0 20%;
+    padding: 3px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.wfw_content-right_item-desc {
+    flex: 0 0 50%;
+    padding: 3px;
+}
+
+.wfw_content-right_item-action {
+    padding: 3px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.wfw_content-right_item-img a {
+    font-size: 80px;
+    color: #f2f2f2;
+}
+
+.item_title,
+.item_delivery {
+    font-weight: 600;
+}
+
+.action_button,
+.action_delete {
+    border: 1px solid #9b5c8f;
+    padding: 3px 5px;
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    margin: 3px 0px;
+    border-radius: 3px;
+    color: #9b5c8f;
+}
+
+.action_button {
+    background-color: #9b5c8f;
+    border: 1px solid #9b5c8f;
+    color: #ffffff;
+}
+
+.action_button:hover {
+    background-color: #ffffff;
+    border: 1px solid #9b5c8f;
+    color: #9b5c8f;
+}
+
+.action_delete:hover {
+    background-color: #9b5c8f;
+    border: 1px solid #9b5c8f;
+    color: #ffffff;
+}
+
+.action_comment {
+    cursor: pointer;
+}
+
+.item_variation,
+.item_detail a,
+.item_title a,
+.action_comment a,
+.wfw_content_more,
+.rate_count,
+.wfw_navbar_button,
+.wfw_invite-icon a,
+.wfw_more_links a,
+.action_comment {
+    color: #0071a1;
+}
+
+.item_stars {
+    color: #9b5c8f;
+}
+
+.price_value {
+    font-size: 18px;
+}
+
+.item_title,
+.item_desc {
+    max-width: 250px;
+}
+
+/*============================================== 
+           Wishlist front page comment modal
+==============================================*/
+
+.wfw_comment_wrapper {
+    box-shadow: 0 0px 10px 0px #cccccc;
+    display: none;
+    left: 50%;
+    max-width: 500px;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    z-index: 999;
+
+}
+
+.wfw_comment_wrapper:before {
+    background-color: #000000;
+    content: '';
+    display: flex;
+    height: 100%;
+    opacity: 0.5;
+    position: absolute;
+    transform: scale(3.5);
+    width: 100%;
+    z-index: -1;
+}
+
+.wfw_comment {
+    background-color: #ffffff;
+    padding: 10px;
+    color: #000;
+}
+
+.wfw_comment_head {
+    background-color: #f2f2f2;
+    padding: 10px;
+    margin: -10px -10px 0px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    color: #0071a1;
+}
+
+.wfw_comment_close {
+    transform: scale(2) rotate(45deg);
+    cursor: pointer;
+}
+
+.wfw_comment_content {
+    display: flex;
+    padding: 10px 0px;
+}
+
+.wfw_comment_content li:first-child {
+    flex: 0 0 30%;
+}
+
+.wfw_comment_content li:last-child {
+    flex: 0 0 70%;
+}
+
+.wfw_comment_priority {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0px;
+}
+
+.wfw_comment_priority>span {
+    flex: 0 0 32%;
+}
+
+.wfw_comment_message textarea {
+    max-width: 335px;
+    width: 100%;
+    resize: none;
+}
+
+.wfw_comment_remaining {
+    font-size: 10px;
+    color: #cccccc;
+    letter-spacing: 0.2px;
+}
+
+.wfw_comment_priority select,
+.wfw_comment_priority input {
+    width: 100%;
+    height: 25px;
+}
+
+.wfw_comment_buttons {
+    text-align: right;
+    background-color: #f2f2f2;
+    padding: 10px;
+    margin: 0px -10px -10px;
+}
+
+.wfw_comment_cancel,
+.wfw_comment_save {
+    padding: 5px 10px;
+    background-color: #ccc;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0px 2px;
+    cursor: pointer;
+    font-size: 14px;
+    color: #000000;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+
+
+@media screen and (max-width: 992px) {
+    .wfw_content {
+        flex-flow: wrap;
+    }
+
+    .wfw_content-left {
+        flex: 0 0 100%;
+    }
+
+    .wfw_content-right_wrapper {
+        flex: 0 0 100%;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .wfw_content-right {
+        flex-wrap: wrap;
+    }
+
+    .wfw_content-right_head {
+        flex: 0 0 100%;
+    }
+
+    .wfw_content-right_item:hover {
+        border-top: 1px solid #f2f2f2;
+        border-bottom: 1px solid #f2f2f2;
+    }
+
+    .wfw_content-right_item {
+        flex-wrap: wrap;
+    }
+
+    .wfw_content-right_item-img {
+        flex: 0 0 40%;
+    }
+
+    .wfw_content-right_item-desc {
+        flex: 0 0 60%;
+    }
+
+    .wfw_content-right_item-action {
+        flex: 0 0 100%;
+    }
 }
