--- a/public/css/wishlist-for-woo-public.css
+++ b/public/css/wishlist-for-woo-public.css
@@ -495,6 +495,23 @@ main button:focus {
     letter-spacing: 0.5px;
 }
 
+/**
+ * Wishlist Actions Design.
+ */
+ span.mwb-wfw-wishlist-processing {
+    color: #ad3ab2;
+}
+span.mwb-wfw-wishlist-processing > i.fa.fa.fa-spinner.fa-spin {
+    padding: 10px;
+}
+
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-dialog-buttons.ui-draggable.ui-resizable {
+    top: 160px !important;
+}
+
+/**
+ * Media Queries.
+ */
 
 @media screen and (max-width: 992px) {
     .wfw_content {
