--- a/public/css/wishlist-for-woo-public.css
+++ b/public/css/wishlist-for-woo-public.css
@@ -513,6 +513,10 @@ span.mwb-wfw-wishlist-processing > i.fa.fa.fa-spinner.fa-spin {
     top: 160px !important;
 }
 
+#wfw_invite_popup {
+    display: none;
+}
+
 /**
  * Media Queries.
  */
