--- a/public/css/wishlist-for-woo-public.css
+++ b/public/css/wishlist-for-woo-public.css
@@ -3,6 +3,70 @@
  * included in this file.
  */
 
+body .post-content p {
+    margin-bottom: 5px;
+}
+
+/*invite modal design*/
+#TB_window {
+    max-height: 250px;
+    transform: translate(40%, 100%);
+    max-width: 350px;
+    width: 100% !important;
+    top: 10% !important;
+    margin-top: 0 !important;
+}
+
+#TB_ajaxContent {
+    width: unset !important;
+    height: unset !important;
+}
+
+.ui-draggable .ui-dialog-titlebar {
+    height: auto;
+}
+
+#wfw_invite_content_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    flex-direction: column;
+}
+
+.wfw-invite_form {
+    color: #1a3365;
+    font-weight: 600;
+    padding: 15px 0;
+}
+
+#wfw_email_invite_form {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+#wfw_invite_email {
+    border: none;
+    box-shadow: 0 0 5px #dadada inset;
+    border-radius: 2px;
+    color: #1a3365;
+    margin-right: 20px;
+}
+
+#wfw_invite_email:focus,
+.mwb-wfw-wishlist-action-buttons a:focus {
+    border: none;
+    outline: none;
+}
+
+#wfw_invite_email::placeholder {
+    opacity: 0.5;
+}
+
+#wfw_invite_email:focus::placeholder {
+    visibility: hidden;
+}
 
 /*============================================== 
             Wishlist Button Styles at Loops
@@ -13,6 +77,7 @@
     position: absolute;
     filter: grayscale(1);
     font-size: 24px;
+    z-index: 100;
 }
 
 .add-to-wishlist.mwb-wfw-loop-icon-button.active-wishlist {
@@ -114,6 +179,7 @@ main form {
     margin: 0;
     padding: 0;
     list-style-type: none;
+    line-height: 1.5;
 }
 
 main.wfw_main {
@@ -130,7 +196,8 @@ main a:focus,
 main input:focus,
 main select:focus,
 main textarea:focus,
-main button:focus {
+main button:focus,
+#wfw_email_invite_form input[name='wfw_invite_send_button']:focus {
     text-decoration: none;
     box-shadow: none;
     outline: none;
@@ -159,6 +226,8 @@ main button:focus {
 .wfw_invite-icon {
     font-size: 18px;
     word-spacing: 5px;
+    display: flex;
+    align-items: center;
 }
 
 .wfw_invite-icon a {
@@ -167,6 +236,7 @@ main button:focus {
     border: 1px solid #f2f2f2;
     padding: 2px 10px;
     border-radius: 35px;
+    margin-left: 10px;
 }
 
 .wfw_invite-icon a span {
@@ -175,12 +245,13 @@ main button:focus {
 
 .wfw_navbar {
     display: flex;
+    padding: 0 !important;
 }
 
 .wfw_navlink {
     padding: 10px;
     font-weight: 600;
-    color: #000000;
+    color: #9b5c8f;
     cursor: pointer;
 }
 
@@ -252,11 +323,15 @@ main button:focus {
 }
 
 .wfw_more_links {
-    max-width: 150px;
+    max-width: 250px;
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.mwb-wfw-share {
+    padding: 0 5px;
 }
 
 .wfw_content_more {
@@ -277,7 +352,7 @@ main button:focus {
 
 
 .wfw_content_more:hover .wfw_content_more>span {
-    color:#000000;
+    color: #000000;
 }
 
 .wfw_content_more_link li:hover {
@@ -335,6 +410,7 @@ main button:focus {
     margin: 3px 0px;
     border-radius: 3px;
     color: #9b5c8f;
+    cursor: pointer;
 }
 
 .action_button {
@@ -422,14 +498,14 @@ main button:focus {
 
 .wfw_comment_head {
     background-color: #f2f2f2;
-    padding: 10px;
+    padding: 10px 20px;
     margin: -10px -10px 0px;
     display: flex;
     justify-content: space-between;
     font-size: 14px;
     font-weight: 600;
     letter-spacing: 0.5px;
-    color: #0071a1;
+    color: #1a3365;
 }
 
 .wfw_comment_close {
@@ -439,7 +515,7 @@ main button:focus {
 
 .wfw_comment_content {
     display: flex;
-    padding: 10px 0px;
+    padding: 10px 10px;
 }
 
 .wfw_comment_content li:first-child {
@@ -457,25 +533,31 @@ main button:focus {
 }
 
 .wfw_comment_priority>span {
-    flex: 0 0 32%;
+    flex: 0 0 50%;
 }
 
 .wfw_comment_message textarea {
     max-width: 335px;
     width: 100%;
     resize: none;
-}
-
-.wfw_comment_remaining {
-    font-size: 10px;
-    color: #cccccc;
-    letter-spacing: 0.2px;
+    background-color: #fdfdfd;
+    border-radius: 5px;
+    box-shadow: 0px 0px 9px -4px #a2a2a2 inset;
+    min-height: 100px;
 }
 
 .wfw_comment_priority select,
 .wfw_comment_priority input {
     width: 100%;
     height: 25px;
+}
+
+.wfw_comment_priority select {
+    border: none;
+    background-color: #dadada;
+    padding: 0px 5px;
+    border-radius: 2px;
+    font-size: 14px;
 }
 
 .wfw_comment_buttons {
@@ -485,32 +567,79 @@ main button:focus {
     margin: 0px -10px -10px;
 }
 
+#wfw_email_invite_form input[name='wfw_invite_send_button'],
 .wfw_comment_cancel,
+.mwb-wfw-wishlist-action-buttons a,
 .wfw_comment_save {
-    padding: 5px 10px;
-    background-color: #ccc;
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0px 2px;
+    background-color: #1a3365;
+    border: 2px solid #1a3365;
+    color: #fff;
     cursor: pointer;
+    display: inline-block;
     font-size: 14px;
-    color: #000000;
     font-weight: 500;
     letter-spacing: 0.5px;
+    margin: 0px 2px;
+    padding: 5px 10px;
+    vertical-align: middle;
+    border-radius: 2px;
+    max-width: 100px;
+    width: 100%;
+}
+
+.wfw_comment_cancel,
+.mwb-wfw-wishlist-action-buttons a:last-child {
+    background-color: #fff;
+    border: 2px solid #1a3365;
+    color: #1a3365;
+}
+
+.mwb-wfw-wishlist-action-buttons a {
+    margin: 10px 10px 0 0;
+    max-width: 150px;
+}
+
+.wfw_comment_message label {
+    color: #1a3365;
+    letter-spacing: 1px;
+    padding-bottom: 5px;
+    display: block;
 }
 
 /**
  * Wishlist Actions Design.
  */
- span.mwb-wfw-wishlist-processing {
+span.mwb-wfw-wishlist-processing {
     color: #ad3ab2;
 }
-span.mwb-wfw-wishlist-processing > i.fa.fa.fa-spinner.fa-spin {
+
+span.mwb-wfw-wishlist-processing>i.fa.fa.fa-spinner.fa-spin {
     padding: 10px;
 }
 
 .ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-dialog-buttons.ui-draggable.ui-resizable {
-    top: 160px !important;
+    position: fixed !important;
+    transform: translate(-55%, 0%);
+    left: 50% !important;
+    top: 25px !important;
+    max-width: 500px !important;
+    margin: 20px !important;
+    width: 100% !important;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-dialog-buttons.ui-draggable.ui-resizable::-webkit-scrollbar {
+    width: 5px;
+}
+
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-dialog-buttons.ui-draggable.ui-resizable::-webkit-scrollbar-track {
+    background-color: #c7c7c7;
+}
+
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-dialog-buttons.ui-draggable.ui-resizable::-webkit-scrollbar-thumb {
+    background-color: #1a3365;
 }
 
 #wfw_invite_popup {
@@ -519,6 +648,27 @@ span.mwb-wfw-wishlist-processing > i.fa.fa.fa-spinner.fa-spin {
 
 .wfw_go_to_checkout {
     display: none;
+}
+
+/*Detail box on front page*/
+
+.wfw_show_details {
+    max-width: 250px;
+    padding: 5px 10px 5px 50px;
+    margin: 5px 0;
+    transition: 0.3s all ease-in-out;
+    background-color: #dadada;
+    clip-path: polygon(10% 40%, 10% 0%, 100% 0, 100% 100%, 10% 100%, 10% 60%, 0 35%);
+}
+
+/*product page popup*/
+
+.mwb-wfw-wishlist-dialog {
+    text-align: center;
+}
+
+.mwb-wfw-icon:hover {
+    opacity: 0.5;
 }
 
 /**
@@ -557,10 +707,13 @@ span.mwb-wfw-wishlist-processing > i.fa.fa.fa-spinner.fa-spin {
 
     .wfw_content-right_item {
         flex-wrap: wrap;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
     }
 
     .wfw_content-right_item-img {
-        flex: 0 0 40%;
+        text-align: left;
     }
 
     .wfw_content-right_item-desc {
@@ -568,6 +721,6 @@ span.mwb-wfw-wishlist-processing > i.fa.fa.fa-spinner.fa-spin {
     }
 
     .wfw_content-right_item-action {
-        flex: 0 0 100%;
+        max-width: 250px;
     }
 }
