--- a/admin/css/wishlist-for-woo-admin.css
+++ b/admin/css/wishlist-for-woo-admin.css
@@ -872,7 +872,7 @@ h4 {
 }
 
 .wfw-overview_content li {
-    color: #9B5C8F;
+    color: #4d4d4d;
     list-style-type: square;
     margin: 10px;
 }
